Fix bug #26815 (foreach (DOM) childnodes causes error using Xinclude) update xinclude test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@148078 c90b9560-bf6c-de11-be94-00142212c4b1